# neodir

./: Cargo.toml  README.md
.github/workflows/: rust.-linux.yml  rust.-windows.yml  rust.yml
src/: lib.rs  main.rs  tests.rs
